# model-library

./: CITATION.cff  README.md  pyproject.toml  run_all.py
.github/workflows/: citation.yml  lint.yml  markdown.yml
docs/: contributing.md  electronic-components.md  energy-balance.md  energy.md  faq.md  faraday.md  ideal-gas-law.md  implicit-derivatives.md  kirchhoff-laws.md  lagrangian-mechanics.md  laplace.md  manual.md  mass-balance.md  mechanical-components.md  newton-laws.md  ode-reduction.md  python.md  taylor.md
experiments/: README.md
experiments/PID-control-inverted-pendulum/: README.md  exp_scipy.py  sim_scipy.py
experiments/cubic-tank-PRBS/: README.md  exp_scipy.py
experiments/damping-effect-analysis/: README.md  exp_scipy.py  sim_scipy.py
experiments/linear-vs-nonlinear-pendulum/: README.md  exp_scipy.py  sim_scipy.py
experiments/numerical-vs-analytical-RC-circuit/: README.md  sim_scipy.py
experiments/tank-with-heating-linearization/: README.md  exp_scipy.py  sim_scipy.py
experiments/tank-with-heating-tf-analysis/: README.md  exp_sympy.py  sim_sympy.py
experiments/tank-with-heating-tf-analysis/results/: python.txt
models/circuits/: README.md
models/circuits/R-circuit/: README.md  sim.py
models/circuits/RC-circuit-series-charge/: README.md  sim_scipy.py
models/circuits/RC-circuit-series-voltage/: README.md  sim_scipy.py
models/circuits/RLC-circuit-series-charge/: README.md  sim_scipy.py
models/circuits/RLC-circuit-series-voltage/: README.md  sim_scipy.py
models/circuits/RLC-series-with-parallel-diode-shockley/: sim_scipy.py
models/electrical/R-circuit/: README.md  sim.py
models/mechanical/: README.md
(+64 files in other folders)
