[project]
name = "model-library"
version = "0.1.0"
description = "A collection of mathematical models with code implementations and explanations, covering tanks, reactors, circuits, and other physical systems."
readme = "README.md"
requires-python = "==3.13.9"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.7",
]

[tool.ruff.lint]
extend-select = ["I", "NPY", "FLY", "UP"]
ignore = ["E741"]
