[project]
name = "model-library"
version = "0.1.0"
description = "A collection of mathematical models with code implementations and explanations, covering tanks, reactors, circuits, and other physical systems."
readme = "README.md"
requires-python = "==3.14.3"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "rumdl>=0.1.57",
]

[tool.ruff.lint]
extend-select = ["I", "NPY", "FLY", "UP"]
ignore = ["E741"]

[tool.rumdl]
flavor = "gfm"
respect_gitignore = true
disable = ["MD013", "MD033"]
